syntax = "proto3";

package org.mango.data;

option java_package = "org.mango.data";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

service OrderService {
  rpc CreateOrder(ProductRequest) returns (CreateOrderResponse);
  rpc AddProduct(AddProductRequest) returns (google.protobuf.Empty);
  rpc CompleteOrder(CompleteOrderRequest) returns (google.protobuf.Empty);
  rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty);
}

message ProductRequest {
  string name = 1;
  double price = 2;
}

message CreateOrderResponse {
  string id = 1;
}

message AddProductRequest {
  string id = 1;
  ProductRequest product = 2;
}

message CompleteOrderRequest {
  string id = 1;
}

message DeleteProductRequest {
  string id = 1;
  string productId = 2;
}
